--- a/action.yml
+++ b/action.yml
@@ -74,8 +74,13 @@ runs:
   using: "composite"
   steps:
     - name: Create labels
-      run: echo "TODO"
-      shell: bash
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+      script: |
+        const labels = await github.rest.issues.listLabelsForRepo({
+          context.repo.owner,
+          context.repo.repo,
+        });
+        console.log(labels);
 
     - name: Gather files
       id: files
