--- a/action.yml
+++ b/action.yml
@@ -75,12 +75,13 @@ runs:
   steps:
     - name: Create labels
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      script: |
-        const labels = await github.rest.issues.listLabelsForRepo({
-          context.repo.owner,
-          context.repo.repo,
-        });
-        console.log(labels);
+      with:
+        script: |
+          const labels = await github.rest.issues.listLabelsForRepo({
+            context.repo.owner,
+            context.repo.repo,
+          });
+          console.log(labels);
 
     - name: Gather files
       id: files
