--- a/action.yml
+++ b/action.yml
@@ -78,8 +78,8 @@ runs:
       with:
         script: |
           const labels = await github.rest.issues.listLabelsForRepo({
-            context.repo.owner,
-            context.repo.repo,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
           });
           console.log(labels);
 
