--- a/action.yml
+++ b/action.yml
@@ -86,10 +86,12 @@ runs:
           for (label of labels.data) {
             have.add(label.name);
           }
+          console.log(have);
 
           const want = new Set(['size/XS', 'size/S', 'size/M', 'size/L', 'size/XL', 'size/XXL']);
-          const diff = want.difference(have);
+          console.log(want);
 
+          const diff = want.difference(have);
           console.log(diff);
 
     - name: Gather files
