--- a/action.yml
+++ b/action.yml
@@ -82,10 +82,7 @@ runs:
             repo: context.repo.repo,
           });
 
-          const have = new Set();
-          for (label of labels.data) {
-            have.add(label.name);
-          }
+          const have = new Set(labels.map((l) => l.name));
           console.log(have);
 
           const want = new Set(['size/XS', 'size/S', 'size/M', 'size/L', 'size/XL', 'size/XXL']);
