--- a/action.yml
+++ b/action.yml
@@ -129,7 +129,7 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          let files = '';
+          let names = '';
           await exec.exec(
             'git',
             ['diff', 'origin/${{ github.base_ref }}', 'HEAD', '--name-only', '--no-renames'],
@@ -141,12 +141,13 @@ runs:
               }
             },
           );
-          console.log(files);
+          const files = names.split(/\r?\n/);
+          console.log(names);
 
           let attrs = '';
           await exec.exec(
             'git',
-            ['check-attr', 'linguist-generated', 'linguist-vendored', '--', files],
+            ['check-attr', 'linguist-generated', 'linguist-vendored', '--', ...names],
             {
               listeners: {
                 stdout: (data) => {
