--- a/action.yml
+++ b/action.yml
@@ -165,6 +165,7 @@ runs:
           }
 
           console.log(modified);
+          core.setOutput('files', [...modified].join(' ')];
 
     - name: Calculate size
       id: size
