--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,4 +16,11 @@ jobs:
           fetch-depth: 0
 
       - name: Diff Size
+        id: diff-size
         uses: ./
+
+      - name: Read outputs
+        run: |
+          echo label=${{ steps.diff-size.outputs.label }}
+          echo size=${{ steps.diff-size.outputs.size }}
+          echo files=${{ steps.diff-size.outputs.files }}
