--- a/action.yml
+++ b/action.yml
@@ -192,7 +192,10 @@ runs:
 
     - name: Calculate size
       id: size
-      run: echo "size=TODO" >> $GITHUB_OUTPUT
+      run: |
+        git diff origin/${{ github.base_ref }} HEAD --numstat --ignore-space-change -- \
+          . ${{ steps.excludes.outputs.excludes }} | \
+          awk '{sum += $1 + $2} END {print sum}'
       shell: bash
 
     - name: Select label
