--- a/action.yml
+++ b/action.yml
@@ -189,12 +189,15 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
+          const args = ['diff', 'origin/${{ github.base_ref }}', 'HEAD', '--numstat', '--ignore-space-change', '--', '.'];
           const excludes = '${{ steps.excludes.outputs.excludes }}'.split(' ');
+
+          console.log(args.concat(excludes));
 
           let changed = ''
           await exec.exec(
             'git',
-            ['diff', 'origin/${{ github.base_ref }}', 'HEAD', '--numstat', '--ignore-space-change', '--', '.', ...excludes],
+            args.concat(excludes),
             {
               listeners: {
                 stdout: (data) => {
