--- a/action.yml
+++ b/action.yml
@@ -189,15 +189,13 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          const args = ['diff', 'origin/${{ github.base_ref }}', 'HEAD', '--numstat', '--ignore-space-change', '--', '.'];
-          const excludes = '${{ steps.excludes.outputs.excludes }}'.split(' ');
-
-          console.log(args.concat(excludes));
+          const excludes = '${{ steps.excludes.outputs.excludes }}'.split(' ').filter(e => e.length > 0);
+          console.log(excludes);
 
           let changed = ''
           await exec.exec(
             'git',
-            args.concat(excludes),
+            ['diff', 'origin/${{ github.base_ref }}', 'HEAD', '--numstat', '--ignore-space-change', '--', '.', ...excludes],
             {
               listeners: {
                 stdout: (data) => {
