--- a/action.yml
+++ b/action.yml
@@ -218,8 +218,43 @@ runs:
 
     - name: Select label
       id: label
-      run: echo "label=TODO" >> $GITHUB_OUTPUT
-      shell: bash
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+      with:
+        script: |
+          const size = parseInt('${{ steps.size.outputs.size }}');
+          const thresholds = [
+            {
+              label: '${{ inputs.xs-label }}',
+              max: parseInt('${{ inputs.xs-threshold }}'),
+            },
+            {
+              label: '${{ inputs.s-label }}',
+              max: parseInt('${{ inputs.s-threshold }}'),
+            },
+            {
+              label: '${{ inputs.m-label }}',
+              max: parseInt('${{ inputs.m-threshold }}'),
+            },
+            {
+              label: '${{ inputs.l-label }}',
+              max: parseInt('${{ inputs.l-threshold }}'),
+            },
+            {
+              label: '${{ inputs.xl-label }}',
+              max: parseInt('${{ inputs.xl-threshold }}'),
+            },
+          ];
+
+          let label = '${{ inputs.xxl-label }}';
+
+          for (t of thresholds) {
+            if (t.max > size) {
+              label = t.label;
+              break;
+            }
+          }
+
+          core.setOutput('label', label);
 
     - name: Assign label
       run: echo "TODO"
