--- a/action.yml
+++ b/action.yml
@@ -257,9 +257,8 @@ runs:
           core.setOutput('label', label);
 
     - name: Assign label
-      run: echo "TODO"
-      shell: bash
-
-    - name: Cleanup labels
-      run: echo "TODO"
-      shell: bash
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+      with:
+        script: |
+          const labels = await github.rest.issues.listLabelsOnIssue(...context.issue());
+          console.log(labels);
