--- a/action.yml
+++ b/action.yml
@@ -260,5 +260,6 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
+          console.log(context.issue);
           const labels = await github.rest.issues.listLabelsOnIssue(context.issue);
           console.log(labels);
