--- a/action.yml
+++ b/action.yml
@@ -260,10 +260,45 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          console.log(context.issue);
           const labels = await github.rest.issues.listLabelsOnIssue({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number,
           });
-          console.log(labels);
+
+          const assigned = new Set(labels.data.map(l => l.name));
+          const sizes = new Set([
+            '${{ inputs.xs-label }}',
+            '${{ inputs.s-label }}',
+            '${{ inputs.m-label }}',
+            '${{ inputs.l-label }}',
+            '${{ inputs.xl-label }}',
+            '${{ inputs.xxl-label }}',
+          ]);
+
+          const size = '{{ steps.label.outputs.label }}';
+          sizes.delete(size);
+
+          if (!assigned.has(size)) {
+            console.debug(`adding label: ${s}`);
+
+            github.rest.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              labels: [{name: size}],
+            })
+          }
+
+          for (const s of sizes) {
+            if (assigned.has(s)) {
+              console.debug(`removing label: ${s}`);
+
+              github.rest.issues.removeLabel({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                name: s,
+              });
+            }
+          }
