--- a/action.yml
+++ b/action.yml
@@ -286,7 +286,7 @@ runs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              labels: [{name: size}],
+              labels: [size],
             })
           }
 
