--- a/action.yml
+++ b/action.yml
@@ -101,52 +101,8 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          const labels = await github.rest.issues.listLabelsForRepo({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-          });
-
-          const have = new Set(labels.data.map((l) => l.name));
-          const want = [
-            {
-              name: '${{ inputs.xs-label }}',
-              description: 'Pull requests with a very small number of lines changed.',
-            },
-            {
-              name: '${{ inputs.s-label }}',
-              description: 'Pull requests with a small number of lines changed.',
-            },
-            {
-              name: '${{ inputs.m-label }}',
-              description: 'Pull requests with a medium number of lines changed.',
-            },
-            {
-              name: '${{ inputs.l-label }}',
-              description: 'Pull requests with a large number of lines changed.',
-            },
-            {
-              name: '${{ inputs.xl-label }}',
-              description: 'Pull requests with a very large number of lines changed.',
-            },
-            {
-              name: '${{ inputs.xxl-label }}',
-              description: 'Pull requests with a very, very large number of lines changed.',
-            },
-          ];
-
-          const missing = want.filter(l => !have.has(l.name));
-
-          for (label of missing) {
-            core.debug(`creating label: ${label.name}`);
-
-            await github.rest.issues.createLabel({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: label.name,
-              color: '4f348b',
-              description: label.description,
-            });
-          }
+          const script = require('./src/createLabel.js')
+          await script({context, core, github});
 
     - name: Gather excludes
       id: excludes
