--- a/action.yml
+++ b/action.yml
@@ -101,7 +101,7 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          const script = require('./src/createLabel.js')
+          const script = require('./src/createLabels.js')
           await script({context, core, github});
 
     - name: Gather excludes
@@ -109,36 +109,8 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          let names = '';
-          await exec.exec(
-            'git',
-            ['diff', 'origin/${{ github.base_ref }}', 'HEAD', '--name-only', '--no-renames'],
-            {
-              listeners: {
-                stdout: (data) => {
-                  names += data.toString();
-                },
-              }
-            },
-          );
-
-          const files = names.split(/\r?\n/).filter(n => n.length > 0);
-
-          let attrs = '';
-          await exec.exec(
-            'git',
-            ['check-attr', 'linguist-generated', 'linguist-vendored', '--', ...files],
-            {
-              listeners: {
-                stdout: (data) => {
-                  attrs += data.toString();
-                },
-              }
-            },
-          );
-
-          let excludes = new Set(attrs.split(/\r?\n/).filter(e => e.endsWith(': set')).map(e => e.split(':')[0]));
-          core.setOutput('excludes', [...excludes].join(' '));
+          const script = require('./src/gatherExcludes.js')
+          await script({core, exec});
 
     - name: Calculate size
       id: size
