--- a/action.yml
+++ b/action.yml
@@ -99,6 +99,14 @@ runs:
   steps:
     - name: Create labels
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+      env:
+        # workaround for https://github.com/actions/toolkit/issues/1124
+        xs_label: core.getInput('xs-label'),
+        s_label: core.getInput('s-label'),
+        m_label: core.getInput('m-label'),
+        l_label: core.getInput('l-label'),
+        xl_label: core.getInput('xl-label')
+        xxl_label: core.getInput('xxl-label'),
       with:
         script: |
           const script = require('./src/createLabels.js')
